# case_memo

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_report.yml
imgui/: imconfig.h
include/: App.h  MarkdownEditor.h  TemplateManager.h
src/: App.cpp  App.h  MarkdownEditor.cpp  TemplateManager.cpp  main.cpp
src/core/: Engine.cpp  Engine.h
src/model/: TemplateManager.cpp  TemplateManager.h
src/ui/: MarkdownEditor.cpp  MarkdownEditor.h
templates/: devlog.json
